The pty we open pipes dpkg's raw output to a file descriptor. We were never reading this, so when dpkg's stdout/stderr filled this pipe dpkg would hang waiting for the slave to read some data off it. This caused the QApt Worker to hang on verbose/long upgrades.

Thanks to Ilia K. for the patch.

From what I can remember PackageKit's aptcc backend used the same pty scheme as QApt,
since both patches were written by the same person, so you guys may want to pick this
one up as well.

BUG:292423
FIXED-IN:1.2.95, 1.2.3
CCMAIL:Matthias Klumpp <matthias@tenstral.net>